<resources>
    <string name="app_name">MagicRentals</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">215087245538598</string>
    <string name="save_search">Save SearchAgent</string>
    <string name="favorites">Favorites</string>
    <string name="createpost">Create Post</string>
    <string name="mypostings">My Postings</string>
    <string name="checkrentals">Check Rentals</string>
    <string name="search_post">Search Post</string>


    <string-array name="proptypelist">
        <item>Select type</item>
        <item>Single-Family Home</item>
        <item>Patio Home</item>
        <item>Villa</item>
        <item>Cottage</item>
        <item>Courtyard Home</item>
        <item>Duplex,Triplex</item>
        <item>Townhome</item>
        <item>Apartment Flat</item>
    </string-array>

    <string-array name="pricerangelist">
        <item>Select range</item>
        <item>$1000-$3000</item>
        <item>$3000-$6000</item>
        <item>$6000-$10000</item>
        <item>$10000-$20000</item>
        <item>$20000-$40000</item>
        <item>$40000-$90000</item>
        <item>above $90000</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>


    <string name="input_name">Property Name</string>
    <string name="town_house">Town House</string>
    <string name="condo">Condo</string>
    <string name="apartment">Apartment</string>
    <string name="villa">Villa</string>
    <string name="submit">Submit</string>
    <string name="propertytype">Property Type</string>
    <string name="basicinfo">Basic Info</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="state">State:</string>
    <string name="propertydetails">Property Details</string>
    <string name="roomscount">Bedrooms:</string>
    <string name="bathroomcount">Bath:</string>
    <string name="area">Area:</string>
    <string name="sqft">Square Ft.</string>
    <string name="description">Description:</string>
    <string name="email">Email:</string>
    <string name="city">City:</string>
    <string name="rent">Rent:</string>
    <string name="curr">USD</string>
    <string name="zipcode">Zipcode:</string>
    <string name="street">Street:</string>
    <string name="contactinfo">Contact Info</string>
    <string name="add_property">Create</string>
    <string name="editproperty">Edit</string>
    <string name="deleteproperty">Delete</string>
    <string name="rentedproperty">Rented</string>
    <string name="cancelproperty">Cancel</string>
    <string name="required">Required</string>
    <string name="alertrented"> Property will be set as rented</string>
    <string name="alertcancel">Property will be cancelled</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string-array name="property_type1">
        <item>Select type</item>
        <item>Apartment</item>
        <item>Condo</item>
        <item>Villa</item>
        <item>Town House</item>
        <item>Penthouse</item>
        <item>Cottage</item>
    </string-array>

    <string-array name="property_type">
        <item>Apartment</item>
        <item>Condo</item>
        <item>Villa</item>
        <item>Town House</item>
        <item>Penthouse</item>
        <item>Cottage</item>
    </string-array>
    <string-array name="rooms">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10+</item>
    </string-array>

    <string-array name="states">


    </string-array>
    <string name="reset">Reset</string>
    <string name="other_details">Extra Details</string>
    <string name="status">Status: </string>

    <string name="viewCount">View Count: </string>
    <string name="propertyName">Property Name</string>
    <string name="empty_list_message">No properties to show.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_properties_landlord">ListPropertiesLandlord</string>
    <string name="title_activity_tenants_favorite">TenantsFavorite</string>

    <string name="url">http://52.53.174.196:3000</string>


    <!-- Navigation drawer related strings -->
    <string name="title_activity_tenant_and_landlord_navigation_drawer">
        TenantAndLandlordNavigationDrawer
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_string_search">Search</string>
    <string name="nav_string_favourites">Favourites</string>
    <string name="nav_string_create_post">Create Post</string>
    <string name="nav_string_view_post">View Post</string>
    <string name="title_activity_pop_up_tenant_landlord">PopUpTenantLandlord</string>

</resources>
