<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item android:title="Tenant"
             android:icon="@drawable/ic_menu_gallery">
        <menu>
            <item
                android:id="@+id/nav_search"
                android:icon="@android:drawable/ic_menu_search"
                android:title="@string/nav_string_search"/>
            <item
                android:id="@+id/nav_favs"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/nav_string_favourites"/>
        </menu>
        </item>



    <item android:title="Landlord">
        <menu>
            <item
                android:id="@+id/nav_view_posts"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_string_view_post"/>
            <item
                android:id="@+id/nav_create_posts"
                android:icon="@drawable/ic_menu_manage"
                android:title="Create Posts"/>
        </menu>
    </item>

    <item
        android:title="Logout"
        android:icon="@android:drawable/ic_menu_rotate"
        android:id="@+id/nav_logout" />


</menu>
