<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="1dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:orientation="vertical">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
        <ImageView
        android:id="@+id/house_image"
        android:layout_width="200dp"
        android:layout_height="100dp"
            android:layout_gravity="left"
        android:src="@mipmap/house"
            android:layout_weight="1"/>
   </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nick_name"
                android:text="@string/propertyName"
                android:layout_gravity="left"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            </LinearLayout>

        <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:id="@+id/house_street"
                android:text="@string/street"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/house_city"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/house_state"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/house_zip"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:layout_marginRight="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/statuscurr"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/viewCount"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="5dp"
                 />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/view_count"
            android:text="@string/viewCount"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginRight="5dp"
            android:paddingRight="5dp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>